--- a/srcs/requirements/nginx/conf/nginx.conf
+++ b/srcs/requirements/nginx/conf/nginx.conf
@@ -1,15 +1,30 @@
- server {
+# server {
 
-  listen 443 ssl default server;
-  listen [::]:443 ssl default server;
+#   listen 443 ssl default_server;
+#   listen [::]:443 ssl default_server;
 
-  server_name chmartin.42.fr;
+#   server_name chmartin.42.fr;
 
-  root ./..;
-  index index.html
+#   root /root/Inception/srcs/requirements/nginx/conf/;
+#   index index.html;
 
-  ssl_protocols TLSv1.2 TLSv1.3
-  ssl_certificate /etc/ssl/certs/chmartin.42.fr.csr;
-	ssl_certificate_key /etc/ssl/certs/chmartin.42.fr.key;
+#   ssl_protocols TLSv1.2 TLSv1.3;
+#   ssl_certificate /etc/ssl/certs/chmartin.42.fr.csr;
+# 	ssl_certificate_key /etc/ssl/certs/chmartin.42.fr.key;
+# }
+
+server {
+
+    listen 443 ssl default_server;
+    listen    [::]:443 ssl default_server;
+
+    server_name  chmartin.42.fr;
+
+    root /etc;
+
+    index index.html;
+
+    ssl_certificate /etc/ssl/certs/chmartin.42.fr.csr;
+    ssl_certificate_key /etc/ssl/certs/chmartin.42.fr.key;
+    ssl_protocols TLSv1.2 TLSv1.3;
 }
-
